--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-flatpickr": "^3.10.7",
+    "react-image-lightbox": "^5.1.1",
     "react-intl": "^5.20.2",
     "react-paginate": "8.1.2",
     "react-redux": "^7.2.4",
@@ -28,6 +29,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-slick": "^0.28.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^5.5.0",
     "reactstrap": "^8.9.0",
     "redux": "^4.1.0",
