--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "connected-react-router": "^6.9.1",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.436.0",
     "moment": "^2.29.0",
     "node-sass": "^6.0.0",
     "react": "^17.0.2",
